--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>I am a Web Frontend Designer and Developer</h2>
             </div>
             <div class="certs">
-                <img class="banner" src="/images/certification-banner.png" alt="Certifications">
+                <img class="banner" src="images/certification-banner.png" alt="Certifications">
                 <ul>
                     <li><a href="#"><img src="" alt="Web Frontend Certification" class="image"></a></li>
                     <li><a href="#"><img src="" alt="CSS transitions and animations certificate" class="image"></a></li>
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="skills">
-                <img class="banner" src="/images/Skills banner.png" alt="Skills">
+                <img class="banner" src="images/skillsbanner.png" alt="Skills">
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -46,10 +46,10 @@
                 </ul>
             </div>
             <div class="projects">
-                <img class="banner" src="/images/projects-banner.png" alt="Projects">
+                <img class="banner" src="images/projects-banner.png" alt="Projects">
             </div>
             <div class="about">
-                <img class="banner" src="/images/projects-banner.png" alt="Projects">
+                <img class="banner" src="images/projects-banner.png" alt="Projects">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime voluptate ad quos itaque hic? Sunt
                     quibusdam quis obcaecati nulla quo ut hic asperiores architecto quasi dignissimos? Voluptas dolorem
                     tempora pariatur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, officiis.
